<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>litejava</groupId>
        <artifactId>litejava-parent</artifactId>
        <version>1.0.0-jdk8</version>
    </parent>

    <artifactId>litejava-benchmark</artifactId>
    <packaging>pom</packaging>
    <name>LiteJava Benchmark</name>

    <properties>
        <maven.compiler.source>24</maven.compiler.source>
        <maven.compiler.target>24</maven.compiler.target>
    </properties>

    <modules>
        <module>benchmark-litejava</module>
        <module>benchmark-litejava-jdkvt</module>
        <module>benchmark-litejava-netty</module>
        <module>benchmark-litejava-jettyvt</module>
        <module>benchmark-runner</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>24</source>
                    <target>24</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
